[package]
name = "book_core"
version = "0.1.0"
edition = "2021"

[dependencies]
boa_engine = { version="0.20.0",features=["annex-b"]}
boa_runtime = "0.20.0"
boa_gc = "0.20.0"
once_cell = "1.20.3"
serde = "1.0.217"
serde_json = "1.0.138"
quickxml_to_serde = { git = "https://github.com/zsakvo/quickxml_to_serde", features = ["json_types"] }
futures-util = "0.3.31"
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["time", "rt-multi-thread"] }
reqwest = { version = "0.12.12", features = ["json", "blocking", "rustls-tls"], default-features = false}
encoding_rs = "0.8.35"
regex = "1.11.1"
chardet = "0.2.4"
base64 = "0.22.1"
hex = "0.4.3"
sha2 = "0.10.8"
cbc = "0.1.2"
aes = "0.8.4"
percent-encoding = "2.3.1"
md5 = "0.7.0" 
uuid = { version = "1.16.0", features=["v4","fast-rng"] }
rustc-hash = "2.1.1"
thread_local = "1.1.8"
boa_interop = "0.20.0"
cfb-mode = "0.8.2"
ofb = "0.6.1"
